--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPNEAI_KEY = sk_**********************************
+OPNEAI_KEY = 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
 
 XLSX_FILE = List.xlsx
